style.css
/*
	Theme Name: Corneliu Cirlan
	Theme URI: http://www.corneliucirlan.com
	Description: Custom theme for www.corneliucirlan.com
	Author: Corneliu Cirlan
	Author URI: http://www.corneliucirlan.com
	GitHub Theme URI: https://github.com/corneliucirlan/cornelius
	Version: 3.1
	Tags: responsive, light, material design, materialize, framework, parallax
*/


/**
 * General
 */

html {
	font-size: 62.5%;
}

body {
	background-color: #f5f5f5;
	font-size: 15px;
	font-size: 2rem;
	display: flex;
    min-height: 100vh;
    flex-direction: column;
}

.main-container {
	flex: 1 0 auto;
}

.parallax-container {
	margin-top: -64px;
	height: 590px;
}

/*@media (max-width: 480px) {
	.parallax-container {
		height: 300px;
	}
}*/

@font-face {
	font-family: 'Oswald';
	font-style: normal;
	font-weight: 400;
	src: local('Oswald Regular'), local('Oswald-Regular'), url(fonts/Oswald/Oswald-Regular.ttf) format('truetype');
}

.row img {
	width: 100%;
	height: auto;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: 'Oswald', 'Helvetica', 'Arial', 'sans-serif';
	text-transform: none;
}

h1 {
	text-align: left;
	font-size: 2.5rem;
	width: 100%;
	margin: 0;
	padding-bottom: 10px;
	padding-bottom: 1rem;
}

h2 {
	font-size: 2.5rem;
}

h3 {
	font-size: 1.7rem;
}

p {
	margin-bottom: 1rem;
	font-family: Arial, serif;
}

p,
a,
span,
ul,
.input-field label,
.input-field input,
.input-field textarea {
	font-size: 1.5rem;
}

.container {
	max-width: 100%;
}

.row {
	margin-bottom: 0;
}

@media (max-width: 480px) {
	.container {
		width: 99%;
	}
}

@media (min-width: 993px) {
	.container {
		width: 80%;
	}
}

.no-padding-left {
	padding-left: 0;
}

.no-padding-right {
	padding-right: 0;
}

.btn, .btn-large, .btn-flat {
	padding: 0 .7rem;
}

.waves-effect .waves-blue .waves-ripple {
	background-color: #337AB7;
	background-color: rgba(51, 122, 183, 0.65);
	color: white;
}

.offsite-title {
	position: absolute;
	left: -9999px;
}


/**
 * Navbar
 */

header .container {
	max-width: 90%;
	width: 90%;
}

header nav {
	background: transparent;
	color: #444;
	transition: ease-in-out .1s;
	box-shadow: none;
}

header nav .brand-logo {
	color: #444;
	position: relative;
	font-size: 2rem;
}

header nav ul a {
	color: #444;
	transition: ease-in-out .1s;
	font-size: 1.6rem;
	text-transform: uppercase;
}

header nav ul a:hover,
header nav ul .current-menu-item a {
	background: none;
	color: black;
}

header .side-nav a {
	font-size: 2rem;
	text-transform: capitalize;
}

.fixed-top {
	background-color: #fff;
	background-color: rgba(255, 255, 255,0.9);
	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
	z-index: 0;
}


/**
 * Header image
 */

.header-image {
	visibility: hidden;
	margin-top: -50px;
	margin-top: -5rem;
}


/**
 * Breadcrunbs
 */

.breadcrumbs-container {
	margin: 1rem 0;
}

.breadcrumbs-container .breadcrumb {
    background: none;
    padding: 5px 5px 5px 0;
    padding: .5rem .5rem .5rem 0;
    margin: 0;
    list-style: none;
    background-color: #f5f5f5;
    border-radius: 4px;
}

.breadcrumbs-container .breadcrumb > li {
	display: inline-block;
	font-size: 14px;
	font-size: 1.4rem;
}

.breadcrumbs-container .breadcrumb > li:last-child {
	color: #444;
}

.breadcrumbs-container .breadcrumb>li+li:before {
	padding:0 5px;
	color:#ccc;
	content:"/\00a0";
}

:after, :before {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.breadcrumbs-container .share-buttons {
	margin: 0;
	line-height: 37px;
}

.breadcrumbs-container .share-buttons li {
	float: left;
	min-width: 3rem;
	text-align: center;
}

@media (max-width: 480px) {
	.breadcrumbs-container {
		padding: 0 .5rem;
		margin-bottom: 1rem;
	}

	.breadcrumbs-container .share-buttons {
		width: 100%;
	}

	.breadcrumbs-container .share-buttons li {
		width: 20%;
	}
}


/**
 * Homepage
 */

.homepage-article h3 {
	text-align: center;
}

.homepage-article p {
	width: 60%;
	margin: 0 auto;
	text-align: left;
}


/**
 * Cards
 */

.card {
	color: #444;
	overflow: hidden;
}

.card .card-content .card-title {
	margin: 0;
	text-transform: uppercase;
}

.card .card-content p {
	margin: 0 0 1rem 0;
	font-family: Arial, sans-serif;
}

.card .card-action {
	background-color: #eee;
	padding: 1rem;
}

.card .card-action .share-buttons {
	margin: 0;
	line-height: 36px;
}

.card .card-content .share-buttons {
	margin: 0;
}

.card .card-content .share-buttons li,
.card .card-action .share-buttons li {
	float: left;
	min-width: 3rem;
	text-align: center;
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating),
.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating):hover {
	margin: 0;
	color: #337ab7;
}

.card .blog-post-details {
	margin: 0 0 .5rem 0;
	text-transform: uppercase;
}

.card img {
	width: calc(100% + 40px);
    width: calc(100% + 4rem);
    margin: 0 -20px;
}


@media screen and (max-width: 480px) {
	.card .card-action .share-buttons {
		width: 100%;
	}

	.card .card-action .share-buttons li {
		width: 20%;
	}
}


/**
 * Footer
 */

footer.page-footer {
	background-color: #444;
}

footer .footer-follow-us {
	list-style: none;
	overflow: hidden;
	margin-bottom: 2rem;
}

footer .footer-follow-us li {
	float: left;
	width: 25%;
	text-align: center;
}

footer .footer-copyright {
	font-size: 15px;
	font-size: 1.5rem;
}

footer p,
footer a {
	color: #C8C8C8;
	color: rgba(200, 200, 200, 1);
}

footer p {
	text-align: center;
}

footer a {
	font-weight: bold;
	transition: ease-in-out .1s;
}

footer .footer-subtitle {
	color: white;
}

footer ul {
	overflow: hidden;
	margin-bottom: 0;
}

footer a:hover,
footer a:active,
footer a:focus {
	color: #fff;
	color: rgba(255, 255, 255, 1);
	text-decoration: none;
}

footer .facebook:hover {
	color: #43609C;
	color: rgba(62, 91, 153, 1);
}

footer .twitter:hover {
	color: #1DA1F2;
	color: rgba(29, 161, 242, 1);
}

footer .google-plus:hover {
	color: #DB4437;
	color: rgba(219, 68, 55, 1);
}

footer .linkedin:hover {
	color: #1D87BD;
	color: rgba(29, 135, 189, 1);
}

footer.page-footer .footer-copyright {
	padding-bottom: 2rem;
}

@media (max-width: 480px) {
	footer .container {
		width: 100%;
	}
	footer ul li {
		width: 100%;
		text-align: center;
	}

	footer ul li a {
		font-size: 2rem;
	}
}

@media (min-width: 481px) and (max-width: 991px) {
	footer .container {
		width: 100%;
	}

	footer ul {
		width: 100%;
	}

	footer ul li {
		float: left;
		width: calc(100%/5);
		text-align: center;
	}

	footer ul li a {
		text-align: center;
	}
}

